GNOME Bugzilla – Bug 775051
nlecomposition: validate: decodebin2 reaching code path that should not be reached when running scrub_forward_seeking on GES timelines
Last modified: 2016-12-01 20:21:12 UTC
Created attachment 340716 [details] 2,*nle*:5,*decodebin*:5 debug log Validate tests: ges.playback.scrub_.*_seeking.test_mixing\..* Failure example: https://ci.gstreamer.net/job/GStreamer-master-meson-validate/135/testReport/junit/ges.playback.scrub_forward_seeking.test_mixing/audio_video/vorbis_theora_ogg/ This issues happens when we tear down the pipeline at the very end of the scenario, basically: * The nlecomposition is rebuilding the sub pipeline because of an EOS * The composition state is set to READY * The composition stops its children management tasks * The composition sets its children state to READY itself The error happens at that time. I have the impression it is quite related to https://bugzilla.gnome.org/show_bug.cgi?id=774480 as we are setting the children state to READY before we actually link up the `change_state` vmethod implementation.
Created attachment 341055 [details] [review] nlecomposition: Deactivate current stack in PAUSED_READY state To avoid a race when tearing down the composition (PAUSED_TO_READY), we should make sure to tear down the current stack and let the GstBin class handle the remaining thing to do during the change state. We should still ignore any error happening when tearing down the bin state just in case.
Attachment 341055 [details] pushed as 66e13d4 - nlecomposition: Deactivate current stack in PAUSED_READY state